--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -371,10 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-484cfaec26bd>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-484cfaec26bd>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/dequeDinamico.py\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/dequeDinamico.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeDequeDinamico.py"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -447,7 +459,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " def remover_por_indice(self, indice):\n",
+    "            if(len(self.deque) > 0):\n",
+    "                elemento_removido = self.deque[indice]\n",
+    "                del self.deque[indice]\n",
+    "                return elemento_removido\n",
+    "            return False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,7 +484,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#----------ORDENAR----------#\n",
+    "def ordenar(self):\n",
+    "    for passagem in range(len(self.deque) - 1, 0, -1):     \n",
+    "        for i in range(passagem):\n",
+    "            if(self.deque[i] > self.deque[i+1]):\n",
+    "                troca = self.deque[i]\n",
+    "                self.deque[i] = self.deque[i+1]\n",
+    "                self.deque[i+1] = troca"
+   ]
   }
  ],
  "metadata": {
@@ -484,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
