--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -60,6 +60,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -366,9 +380,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ordena_quick(lista):\n",
-    "    #sua implementação aqui\n",
-    "    return lista"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/deque.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeDeque.py\n",
+    "\n",
+    "class QuickSort:\n",
+    "\n",
+    "    def partition(self, deque, inicio, fim):\n",
+    "        pivo = deque[fim]\n",
+    "        i = inicio\n",
+    "        for j in range(inicio, fim):\n",
+    "            if deque[j] <= pivo:\n",
+    "                deque[j], deque[i] = deque[i], deque[j]\n",
+    "                i = i + 1\n",
+    "        deque[i], deque[fim] = deque[fim], deque[i]\n",
+    "        return i\n",
+    "    \n",
+    "    def quicksort(self, deque, inicio=0, fim=None):\n",
+    "        if fim is None:\n",
+    "            fim = len(deque)-1\n",
+    "        if inicio < fim:\n",
+    "            pivot = self.partition(deque, inicio, fim)\n",
+    "            self.quicksort(deque, inicio, pivot-1)\n",
+    "            self.quicksort(deque, pivot+1, fim)\n",
+    "    "
    ]
   }
  ],
