Atividade 1 Lab 3 Concluida

--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -171,7 +171,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arvore.mostra_largura()"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvore.py\n",
+    "\n",
+    " def mostrar_largura(self):\n",
+    "        visitados = set()\n",
+    "        visitados.add(self.raiz)\n",
+    "        falta_visitar = [self.raiz] #   Falta visitar = Fila\n",
+    "        resultado = \"\"\n",
+    "        while falta_visitar:\n",
+    "            vertice = falta_visitar.pop()\n",
+    "            resultado += str(vertice) + \" | \"\n",
+    "            \"\"\" print(\"Teste Resultado: \", resultado) \"\"\"\n",
+    "            for vizinho in vertice.proximo:\n",
+    "                \"\"\" print(\"Vertice.prox: \",vertice.proximo, \"\\nVizinho: \", vizinho, \"\\nFALTA VISITAR: \", falta_visitar,\"\\n\") \"\"\"\n",
+    "                if not vizinho in visitados:\n",
+    "                    falta_visitar.insert(0,vizinho)\n",
+    "            visitados.add(vertice)\n",
+    "        print(resultado.rstrip(\"|\"))"
    ]
   },
   {
