Mostrar largura - árvore binária

--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -209,6 +209,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -314,7 +321,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arvore.mostra_largura()"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreBinaria.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeArvoreBinaria.py\n",
+    "\n",
+    "def mostrar_largura(self, node):\n",
+    "        if node is self.raiz:\n",
+    "            print(node, \" | \", end='')\n",
+    "        if node.esquerda:\n",
+    "            print(node.esquerda, \" | \", end='')  \n",
+    "        if node.direita:\n",
+    "            print(node.direita, \" | \", end='')\n",
+    "        if node.esquerda:\n",
+    "            self.mostrar_largura(node.esquerda)\n",
+    "        if node.direita:\n",
+    "            self.mostrar_largura(node.direita)"
    ]
   },
   {
