--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -351,7 +351,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreBinaria.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeArvoreBinaria.py\n",
+    "\n",
+    " def arvore_cheia(self, node= None):\n",
+    "        if node is None:\n",
+    "            node = self.raiz\n",
+    "        tamanho = self.tamanho()\n",
+    "        total_de_nos = 2 ** (tamanho - 1)\n",
+    "        total_de_folhas = self.contar_folhas()\n",
+    "        if total_de_nos == total_de_folhas:\n",
+    "            return print(\"Árvore cheia!\")\n",
+    "        return print(\"Árvore não cheia!\")"
+   ]
   },
   {
    "cell_type": "markdown",
