Inicio árvore binária de buisca

--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -378,7 +378,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreBinaria.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeArvoreBinaria.py\n",
+    "\n",
+    " def espelhar(self, node=None):\n",
+    "        if node is None:\n",
+    "            node = self.raiz\n",
+    "        fila = []\n",
+    "        fila.append(node)\n",
+    "        while len(fila):\n",
+    "            node = fila.pop()\n",
+    "            if node:\n",
+    "                node.esquerda, node.direita = node.direita, node.esquerda\n",
+    "                fila.append(node.esquerda)\n",
+    "                fila.append(node.direita)\n",
+    "        return self.raiz"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -386,14 +402,9 @@
    "source": [
     "3) Ache a raiz de cada uma das seguintes árvores binárias:\n",
     "\n",
-    "a) Árvore com percurso pós-ordem: FCBDG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "."
+    "a) Árvore com percurso pós-ordem: FCBDG\n",
+    "\n",
+    "Raiz: G"
    ]
   },
   {
@@ -407,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "."
+    "Raiz: I"
    ]
   },
   {
@@ -421,20 +432,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "."
+    "Raiz: D  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "4) Qual a altura máxima e mínima de uma árvore binária com 28 nós?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Altura máxima: 28\n",
+    "Altura mínima: 5\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -446,7 +462,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Nível 3: 4\n",
+    "Nível 4: 8\n",
+    "Nível 12: 2048\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,7 +478,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "7 Níveis"
+   ]
   },
   {
    "cell_type": "markdown",
