--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -650,7 +650,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arv_bst.mostra_largura()"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreBinariaDeBusca.py\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/testeArvoreBinariaDeBusca.py\n",
+    "\n",
+    " def mostrar_largura(self, node=None):\n",
+    "        if node is None:\n",
+    "            node = self.raiz\n",
+    "        if node.esquerda:\n",
+    "            self.mostrar_largura(node.esquerda)\n",
+    "        print(node, \" | \",end=\"\")\n",
+    "        if node.direita:\n",
+    "            self.mostrar_largura(node.direita)\n"
    ]
   },
   {
