--- a/laboratórios/lab03.ipynb
+++ b/laboratórios/lab03.ipynb
@@ -23,9 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'estruturas.arvore'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-76591ebc3204>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mestruturas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlista\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mestruturas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marvore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mestruturas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marvore_binaria\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'estruturas.arvore'"
+     ]
+    }
+   ],
    "source": [
     "from estruturas.pilha import *\n",
     "from estruturas.fila import *\n",
@@ -463,9 +475,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nível 3: 4\n",
-    "Nível 4: 8\n",
-    "Nível 12: 2048\n"
+    "Nível 3: 7\n",
+    "Nível 4: 15\n",
+    "Nível 12: 4095"
    ]
   },
   {
@@ -479,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7 Níveis"
+    "6 Níveis"
    ]
   },
   {
@@ -707,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
