--- a/laboratórios/lab04.ipynb
+++ b/laboratórios/lab04.ipynb
@@ -282,15 +282,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rotação simples à direita: ocorre quando o elemento desregulado está com fator de balanceamento negativo E a \n",
-    "# subárvore à esquerda também é negativa\n",
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreAvl.py\n",
     "\n",
-    "# p (é o elemento desregulado - fb < 0)\n",
-    "# u = elemento raiz da subárvore da esquerda, que também tem fb < 0\n",
-    "def rotaciona_simples_direita(no_desregulado):\n",
-    "# pai de p aponta para u\n",
-    "# p.esq = u.dir\n",
-    "# u.dir = p\n"
+    "def rotacao_direita(self, x):\n",
+    "        y = x.direita\n",
+    "        T2 = y.esquerda\n",
+    "        y.esquerda = x\n",
+    "        x.direita = T2\n",
+    "        x.altura = 1 + max(self.getAltura(x.esquerda), self.getAltura(x.direita))\n",
+    "        y.altura = 1 + max(self.getAltura(y.esquerda), self.getAltura(y.direita))\n",
+    "        return y\n",
+    "\n",
+    "def getAltura(self, raiz):\n",
+    "        if not raiz:\n",
+    "            return 0\n",
+    "        return raiz.altura\n"
    ]
   },
   {
@@ -306,12 +312,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# p (é o elemento desregulado - fb > 0)\n",
-    "# u = elemento raiz da subárvore da esquerda, que também tem fb < 0\n",
-    "def rotaciona_simples_esquerda(no_desregulado):\n",
-    "# pai de p aponta para z\n",
-    "# p.dir = z.esq\n",
-    "# z.esq = p"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreAvl.py\n",
+    "\n",
+    "def rotacao_esquerda(self, x):\n",
+    "        y = x.esquerda\n",
+    "        T3 = y.direita\n",
+    "        y.esquerda = x\n",
+    "        x.direita = T3\n",
+    "        x.altura = 1 + max(self.getAltura(x.esquerda), self.getAltura(x.direita))\n",
+    "        y.altura = 1 + max(self.getAltura(y.esquerda), self.getAltura(y.direita))\n",
+    "        return y\n",
+    "\n",
+    "def getAltura(self, raiz):\n",
+    "        if not raiz:\n",
+    "            return 0\n",
+    "        return raiz.altura"
    ]
   },
   {
@@ -389,7 +404,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreAvl.py\n",
+    "\n",
+    "def inserir(self, raiz, chave):\n",
+    "         if not raiz:\n",
+    "            return NodeArvoreAVL(chave)\n",
+    "        elif chave < raiz.valor:\n",
+    "            raiz.esquerda = self.inserir(raiz.esquerda, chave)\n",
+    "        else:\n",
+    "            raiz.direta = self.inserir(raiz.direita, chave)\n",
+    "        raiz.altura = 1 + max(self.getAltura(raiz.esquerda), self.getAltura(raiz.direita))\n",
+    "        balanco = self.getBalanceamento(raiz)\n",
+    "        if balanco > 1 and chave < raiz.esquerda.valor:\n",
+    "            return self.rotacao_esquerda(raiz)\n",
+    "        if balanco < -1 and chave > raiz.direita.valor:\n",
+    "            return self.rotacao_direita(raiz)\n",
+    "        if balanco > 1 and chave > raiz.esquerda.valor:\n",
+    "            raiz.esquerda = self.rotacao_esquerda(raiz.esquerda)\n",
+    "            return self.rotacao_direita(raiz)\n",
+    "        if balanco < -1 and chave < raiz.direita.valor:\n",
+    "            raiz.direita = self.rotacao_direita(raiz.direita)\n",
+    "            return self.rotacao_esquerda(raiz)\n",
+    "        return raiz"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,7 +444,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/arvoreAvl.py\n",
+    "\n",
+    " def remover(self, raiz, chave):\n",
+    "        if not raiz:\n",
+    "            return raiz\n",
+    "        elif chave < raiz.valor:\n",
+    "            raiz.esquerda = self.remover(raiz.esquerda, chave)\n",
+    "        elif chave > raiz.valor:\n",
+    "            raiz.direita = self.remover(raiz.direita, chave)\n",
+    "        else:\n",
+    "            if raiz.esquerda is None:\n",
+    "                temp = raiz.direita\n",
+    "                raiz = None\n",
+    "                return temp\n",
+    "            elif raiz.direita is None:\n",
+    "                temp = raiz.esquerda\n",
+    "                raiz = None\n",
+    "                return temp\n",
+    "            temp = self.getNodeComMenorValor(raiz.direita)\n",
+    "            raiz.valor = temp.valor\n",
+    "            raiz.direita = self.remover(raiz.direita, temp.valor)\n",
+    "        if raiz is None:\n",
+    "            return raiz\n",
+    "        raiz.altura = 1 + max(self.getAltura(raiz.esquerda), self.getAltura(raiz.direita))\n",
+    "        balanco = self.getBalanceamento(raiz)\n",
+    "        if balanco > 1 and self.getBalanceamento(raiz.esquerda) >= 0:\n",
+    "            return self.rotacao_direita(raiz)\n",
+    "        if balanco < -1 and self.getBalanceamento(raiz.direita) <= 0:\n",
+    "            return self.rotacao_esquerda(raiz)\n",
+    "        if balanco > 1 and self.getBalanceamento(raiz.esquerda) < 0:\n",
+    "            raiz.esquerda = self.rotacao_esquerda(raiz.esquerda)\n",
+    "            return self.rotacao_direita(raiz)\n",
+    "        if balanco < -1 and self.getBalanceamento(raiz.direita) > 0:\n",
+    "            raiz.direita = self.rotacao_direita(raiz.direita)\n",
+    "            return self.rotacao_esquerda(raiz)\n",
+    "        return raiz\n",
+    "    \n",
+    "    def getNodeComMenorValor(self, raiz):\n",
+    "        if raiz is None or raiz.esquerda is None:\n",
+    "            return raiz\n",
+    "        return self.getNodeComMenorValor(raiz.esquerda)"
+   ]
   }
  ],
  "metadata": {
