--- a/laboratórios/lab02.ipynb
+++ b/laboratórios/lab02.ipynb
@@ -120,9 +120,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ordena_insercao(lista):\n",
-    "    #sua implementação aqui\n",
-    "    return lista"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/deque.py\n",
+    "\n",
+    "def ordenar(self):\n",
+    "            for passagem in range(len(self.deque) - 1, 0, -1):     \n",
+    "                for i in range(passagem):\n",
+    "                    if(self.deque[i] > self.deque[i+1]):\n",
+    "                        troca = self.deque[i]\n",
+    "                        self.deque[i] = self.deque[i+1]\n",
+    "                        self.deque[i+1] = troca"
    ]
   },
   {
@@ -179,9 +185,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ordena_selecao(lista):\n",
-    "    #sua implementação aqui\n",
-    "    return lista"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/deque.py\n",
+    "\n",
+    "def selectionSort(self):\n",
+    "            for j in range(len(self.deque) - 1):\n",
+    "                indice_minimo = j\n",
+    "                for i in range (j, len(self.deque)):\n",
+    "                    if self.deque[i] < self.deque[indice_minimo]:\n",
+    "                        indice_minimo = i\n",
+    "                if self.deque[j] > self.deque[indice_minimo]:\n",
+    "                    auxiliar = self.deque[j]\n",
+    "                    self.deque[j] = self.deque[indice_minimo]\n",
+    "                    self.deque[indice_minimo] = auxiliar"
    ]
   },
   {
@@ -240,9 +255,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ordena_bolha(lista):\n",
-    "    #sua implementação aqui\n",
-    "    return lista"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/deque.py\n",
+    "\n",
+    "def bubbleSort(self):\n",
+    "            for j in range(len(self.deque) -1 ):\n",
+    "                for i in range(len(self.deque) -1 ):\n",
+    "                    if self.deque[i] > self.deque[i+1]:\n",
+    "                        self.deque[i], self.deque[i+1] = self.deque[i+1], self.deque[i]"
    ]
   },
   {
@@ -323,9 +342,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ordena_merge(lista):\n",
-    "    #sua implementação aqui\n",
-    "    return lista"
+    "https://github.com/marcussaraiva/Estruturas-II/blob/master/Listas/deque.py\n",
+    "\n",
+    "class MergeSort:\n",
+    "    def mergeSort(self, deque, inicio=0, fim=None):        \n",
+    "            if fim is None:\n",
+    "                fim = len(deque)\n",
+    "            if (fim - inicio > 1):\n",
+    "                meio = (fim + inicio) // 2\n",
+    "                self.mergeSort(deque, inicio, meio)\n",
+    "                self.mergeSort(deque, meio, fim)\n",
+    "                self.merge(deque, inicio,meio, fim)\n",
+    "        \n",
+    "    def merge(self, deque, inicio, meio, fim):\n",
+    "            esquerda = deque[inicio:meio]\n",
+    "            direita = deque[meio:fim]\n",
+    "            topo_esquerda, topo_direita = 0, 0\n",
+    "            for k in range(inicio, fim):\n",
+    "                if topo_esquerda >= len(esquerda):\n",
+    "                    deque[k] = direita[topo_direita]\n",
+    "                    topo_direita = topo_direita + 1\n",
+    "                elif topo_direita >= len(direita):\n",
+    "                    deque[k] = esquerda[topo_esquerda]\n",
+    "                    topo_esquerda = topo_esquerda + 1\n",
+    "                elif esquerda[topo_esquerda] < direita[topo_direita]:\n",
+    "                    deque[k] = esquerda[topo_esquerda]\n",
+    "                    topo_esquerda = topo_esquerda + 1\n",
+    "                else:\n",
+    "                    deque[k] = direita[topo_direita]\n",
+    "                    topo_direita = topo_direita + 1"
    ]
   },
   {
