--- a/laboratórios/lab05.ipynb
+++ b/laboratórios/lab05.ipynb
@@ -100,7 +100,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rotacao_esquerda(self, x):\n",
+    "        y = x.direita\n",
+    "        x.direita = y.esquerda\n",
+    "        if y.esquerda != self.TNULL:\n",
+    "            y.esquerda.pai = x\n",
+    "        y.pai = x.pai\n",
+    "        if x.pai is None:\n",
+    "            self.raiz = y\n",
+    "        elif x == x.pai.esquerda:\n",
+    "            x.pai.esquerda = y\n",
+    "        else:\n",
+    "            x.pai.direita = y\n",
+    "        y.esquerda = x\n",
+    "        x.pai = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,7 +129,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rotacao_direita(self, x):\n",
+    "        y = x.esquerda\n",
+    "        x.esquerda = y.direita\n",
+    "        if y.direita != self.TNULL:\n",
+    "            y.direita.pai = x\n",
+    "        y.pai = x.pai\n",
+    "        if x.pai is None:\n",
+    "            self.raiz = y\n",
+    "        elif x == x.pai.direita:\n",
+    "            x.pai.direita = y\n",
+    "        else:\n",
+    "            x.pai.esquerda = y\n",
+    "        y.direita = x\n",
+    "        x.pai = y"
+   ]
   },
   {
    "cell_type": "markdown",
