--- a/laboratórios/lab06.ipynb
+++ b/laboratórios/lab06.ipynb
@@ -141,7 +141,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class: NodeArvoreB:\n",
+    "    def __init__(self, folha=False):\n",
+    "        self.folha = folha\n",
+    "        self.chave = []\n",
+    "        self.filho = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +195,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " def busca(self, chave, node=None):\n",
+    "        if node is not None:\n",
+    "            i = 0\n",
+    "            while i < len(node.chaves) and chave > node.chaves[i][0]:\n",
+    "                i += 1\n",
+    "            if i < len(node.chaves) and chave == node.chaves[i][0]:\n",
+    "                return node, i\n",
+    "            elif node.folha:\n",
+    "                return None\n",
+    "            else:\n",
+    "                return self.busca(chave, node.filho[i])\n",
+    "        else:\n",
+    "            return self.busca(chave, self.raiz)"
+   ]
   },
   {
    "cell_type": "markdown",
